--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.188",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -33,9 +34,11 @@
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
     "json-server": "^0.17.1",
+    "lodash": "^4.17.21",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.4",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vue-lodash": "^2.1.2"
   },
   "eslintConfig": {
     "root": true,
